--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <a href="/4.multi-page-Website/index.html">Home</a>
-    <a href="../4.multi-page-Website/more-info/contact.html">Contact Me</a>
-    <a href="../4.multi-page-Website/more-info/my-skill.html">My Skill</a>
+    <a href="./index.html">Home</a>
+    <a href="more-info/contact.html">Contact Me</a>
+    <a href="more-info/my-skill.html">My Skill</a>
 
     <h1>Welcome to My Website!</h1>
     <hr />
