--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <hr />
 
     <!-- Thêm hình ảnh tuhoc.cc.jpg và khi click chuột sẽ điều hướng đến contact.html  -->
-    <a href="/4.multi-page-Website/more-info/contact.html"
-      ><img src="./assets/images/tuhoc.cc.jpg" alt="TuHoc.cc"
+    <a href="./more-info/contact.html"
+      ><img src="./assets/images/Screenshot 2024-04-06 000204.png" alt="TuHoc.cc"
     /></a>
     <h2>About me</h2>
     <p>
